The first variant of the class Main